Remove bullet list in intro. Add index with fix

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <body>
   <div class="container">
     <!-- Content here -->
-    <form>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
     <div id="app-4">
+      <form>
+        <div class="form-group">
+          <label for="todoItem">Todo Item</label>
+          <input class="form-control" id="todoItem" ref="todoItem">
+        </div>
+        <button type="button" class="btn btn-primary" @click="addTodo">Submit</button>
+      </form>
       <ol>
         <li v-for="todo in todos">
           {{ todo.text }}
@@ -32,7 +31,8 @@
     var app4 = new Vue({
       el: '#app-4',
       data: {
-        todos: [{
+        todos: [
+          {
             text: 'Learn JavaScript'
           },
           {
@@ -42,6 +42,13 @@
             text: 'Build something awesome'
           }
         ]
+      },
+      methods: {
+        addTodo: function () {
+          this.todos.push({
+            text: this.$refs.todoItem.value
+          });
+        }
       }
     })
   </script>
