--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
         <!-- <h2>{{ product }} are in stock</h2> -->
         <ul class="list-unstyled">
           <li v-for="product in products">
-            <input type="number" name="" value="" v-model.number="product.quantity">
+            <input type="number" name="" value="" v-model.number="product.quantity" min="0" step="1">
             <button type="button" name="button" @click="product.quantity += 1">Add</button>
             {{ product.name }}
             <span v-if="product.quantity === 0"> - OUT OF STOCK</span>
